# Spotify-Client

./: CMakeLists.txt  README.md  main.cpp  main.h  main.qml  res.qrc
lib/include/lib/crash/: crashhandler.hpp
lib/include/lib/settings/: qt.hpp
lib/include/lib/spotify/: track.hpp
src/: CMakeLists.txt
src/commandline/: processor.cpp
src/dialog/: CMakeLists.txt  base.hpp  setup.cpp  setup.hpp
src/qml/: CMakeLists.txt  application.cpp  application.h  qmlabstractcontent.cpp  qmlabstractcontent.h  qmlnowplaying.cpp  qmlnowplaying.h  qmltitle.cpp  qmltitle.h  qmltitleinfo.cpp  qmltitleinfo.h  qmltrack.cpp  qmltrack.h  qmltracks.cpp  qmltracks.h  qmlview.cpp  qmlview.h  spotifyapplication.cpp  spotifyapplication.h
src/spotify/: deviceselect.cpp
src/spotifyclient/: runner.cpp  runner.hpp
src/util/: CMakeLists.txt  icon.cpp  icon.hpp  refresher.cpp  url.cpp  url.hpp
